--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@clerk/nextjs": "^4.29.3",
     "@monaco-editor/react": "^4.6.0",
     "babel-loader": "^9.1.3",
     "class-variance-authority": "^0.7.0",
