--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18",
     "react-resizable-panels": "^1.0.7",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
