--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@clerk/nextjs": "^4.29.3",
     "@monaco-editor/react": "^4.6.0",
+    "@tanstack/react-query": "^5.17.19",
     "babel-loader": "^9.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
