--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-resizable-panels": "^1.0.7",
+    "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
