--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
+    "@babel/core": "^7.23.9",
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@clerk/nextjs": "^4.29.5",
