--- a/server/package.json
+++ b/server/package.json
@@ -15,23 +15,19 @@
 		"@types/babel__core": "^7.20.5",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
-		"@types/memory-fs": "^0.3.7",
 		"@types/nodemon": "^1.19.6",
 		"nodemon": "^3.0.2",
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
 		"@babel/core": "^7.23.7",
-		"@babel/plugin-transform-modules-commonjs": "^7.23.3",
 		"@babel/preset-env": "^7.23.7",
 		"@babel/preset-react": "^7.23.3",
 		"babel-loader": "^9.1.3",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
-		"memory-fs": "^0.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"webpack": "^5.90.1",
-		"webpack-cli": "^5.1.4"
+		"webpack": "^5.90.1"
 	}
 }
