--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
 		"express": "^4.18.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"webpack": "^5.90.1"
+		"webpack": "^5.90.1",
+		"workerpool": "^9.1.0"
 	}
 }
