--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
 		"babel-loader": "^9.1.3",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"memfs": "^4.7.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"unionfs": "^4.5.1",
 		"webpack": "^5.90.1",
 		"workerpool": "^9.1.0"
 	}
